--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mysql2": "^2.3.3",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "swagger-ui-express": "^4.2.0"
   }
 }
