--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "author": "Huynh Thanh Hang, Trang Nguyen, and Miro Taxell",
   "license": "GPL-3.0",
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.13.2",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "exif": "^0.6.0",
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "multer": "^1.4.3",
     "mysql2": "^2.3.3",
