--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "sharp": "^0.29.3",
     "swagger-ui-express": "^4.2.0"
   }
 }
