--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "GPL-3.0",
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.13.2",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "exif": "^0.6.0",
