--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "exif": "^0.6.0",
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
